--- a/pages/store/apply/index/index.wxss
+++ b/pages/store/apply/index/index.wxss
@@ -1,4 +1,8 @@
-/* pages/store/apply/index/index.wxss */
+/* pages/store/apply/index.wxss */
+page {
+  background: #F5F5F5;
+}
+
 .store-submits-apply {
   padding: 15rpx;
   box-sizing: border-box;
@@ -104,21 +108,23 @@
   align-items: center;
   box-sizing: border-box;
 }
-.store-submits-apply-info-textarea{
+
+.store-submits-apply-info-textarea {
   width: 100%;
   /* height:300rpx; */
-  height:auto!important;
-  _height:80rpx;
-  min-height:80rpx;
+  height: auto !important;
+  _height: 80rpx;
+  min-height: 80rpx;
   border-radius: 12rpx;
   border: 2rpx solid rgb(221, 221, 221);
   display: flex;
   align-items: center;
   box-sizing: border-box;
 }
+
 /* 	textarea::-webkit-input-placeholder{
-    padding: 10rpx;
-} */
+	    padding: 10rpx;
+	} */
 
 .store-submits-apply-info-input-input {
   padding: 0;
@@ -238,8 +244,7 @@
 
 .store-submits-apply-city-item-border {
   font-size: 28rpx;
-  width: 222%;
-  margin-top:20rpx;
+  width: 100%;
   box-sizing: border-box;
   height: 72rpx;
   line-height: 72rpx;
