--- a/pages/merchant/apply/list/index.wxss
+++ b/pages/merchant/apply/list/index.wxss
@@ -1,37 +1,30 @@
 /* pages/merchant/apply/list/index.wxss */
 .merchant-entry {
-  padding: 16rpx 16rpx;
-  box-sizing: border-box;
+  padding: 16rpx;
   padding-bottom: 120rpx;
+  box-sizing: border-box;
 }
 
 .merchant-entry-list {
-  background: rgba(255, 255, 255, 1);
-  box-shadow: 0 4rpx 12rpx 0 rgba(0, 0, 0, 0.05);
+  background: #fff;
+  box-shadow: 0 4rpx 12rpx rgba(0, 0, 0, 0.05);
   border-radius: 12rpx;
-  padding: 10rpx 30rpx 26rpx;
-  margin-bottom: 12rpx;
-}
-
-.merchant-entry-list:last-child {
-  margin-bottom: 0;
+  padding: 20rpx;
+  margin-bottom: 16rpx;
 }
 
 .merchant-entry-list-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 72rpx;
-  border-bottom: 2rpx solid #eeeeee;
+  border-bottom: 1rpx solid #eee;
+  padding-bottom: 12rpx;
 }
 
 .name {
   font-size: 28rpx;
   color: #333;
-  max-width: 460rpx;
   overflow: hidden;
-  height: 60rpx;
-  line-height: 60rpx;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
@@ -40,75 +33,49 @@
   font-size: 28rpx;
 }
 
-.stateColorOne {
+.state-pending {
   color: #f7b500;
 }
 
-.stateColorTwo {
+.state-approved {
   color: #6dd400;
 }
 
-.stateColorThree {
+.state-rejected {
   color: #ff3b30;
 }
 
-.merchant-entry-list-numbers {
-  font-size: 28rpx;
-  color: #333;
-  line-height: 40rpx;
-}
-
+.merchant-entry-list-numbers,
 .merchant-entry-list-time {
-  font-size: 28rpx;
-  color: #333;
-  line-height: 40rpx;
+  font-size: 26rpx;
+  color: #666;
+  margin-top: 8rpx;
 }
 
 .merchant-entry-list-btn {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-top: 10rpx;
-  box-sizing: border-box;
+  margin-top: 12rpx;
 }
 
-.merchant-entry-list-btn-one {
-  padding: 0rpx 20rpx;
-  box-sizing: border-box;
-  height: 50rpx;
-  border-radius: 12rpx;
-  border: 2rpx solid rgba(0, 145, 255, 1);
+.btn-see-reason {
   font-size: 24rpx;
   color: #0091ff;
-  line-height: 50rpx;
+  border: 1rpx solid #0091ff;
+  padding: 6rpx 16rpx;
+  border-radius: 8rpx;
+  text-align: center;
 }
 
-.merchant-entry-list-btn-two {
-  padding: 0rpx 20rpx;
-  box-sizing: border-box;
-  height: 50rpx;
-  border-radius: 12rpx;
-  border: 2rpx solid rgba(255, 50, 50, 1);
-  font-size: 24rpx;
-  color: #ff3232;
-  line-height: 50rpx;
-  margin-left: 16rpx;
-}
-
-
-.addBtn {
+.add-btn {
   position: fixed;
+  bottom: 30rpx;
   left: 50%;
-  bottom: 0;
-  margin: 30rpx 0rpx;
-  margin-left: -330rpx;
+  transform: translateX(-50%);
   width: 660rpx;
   height: 82rpx;
-  background: rgba(240, 34, 48, 1);
-  border-radius: 14rpx;
-  font-size: 32rpx;
+  background: #f02230;
   color: #fff;
   text-align: center;
   line-height: 82rpx;
-  margin-right: auto;
+  border-radius: 14rpx;
+  font-size: 32rpx;
 }
